[package]
name = "gc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.2"
dirs = "3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
lazy_static = "1.4.0"
colored = "2.0.4"
prettytable-rs = "0.10.0"
strum = "0.25.0"
strum_macros = "0.25.0"
